--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,78 @@
-absl-py==2.0.0
+absl-py==1.4.0
+array-record==0.4.1
+astor==0.8.1
 astunparse==1.6.3
+attrs==23.1.0
+autokeras==1.1.0
 cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.1
+click==8.1.7
 contourpy==1.1.1
 cycler==0.12.1
+Cython==3.0.4
+dm-tree==0.1.8
+etils==1.5.2
+fastjsonschema==2.18.1
 flatbuffers==23.5.26
 fonttools==4.43.1
+fsspec==2023.10.0
 gast==0.5.4
 google-auth==2.23.3
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+googleapis-common-protos==1.61.0
 grpcio==1.59.0
 h5py==3.10.0
 idna==3.4
+imageio==2.31.6
+importlib-resources==6.1.0
+imutils==0.5.4
+Jinja2==3.1.2
 joblib==1.3.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter_core==5.4.0
 keras==2.14.0
+keras-core==0.1.7
+keras-nlp==0.6.2
+keras-tuner==1.4.5
 kiwisolver==1.4.5
+kt-legacy==1.0.5
 libclang==16.0.6
 Markdown==3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+mdurl==0.1.2
 ml-dtypes==0.2.0
+namex==0.0.7
+nbformat==5.9.2
+nltk==3.8.1
 numpy==1.26.1
 oauthlib==3.2.2
+opencv-python==4.8.1.78
 opt-einsum==3.3.0
 packaging==23.2
-Pillow==10.1.0
-protobuf==4.24.4
+pandas==2.1.2
+Pillow==10.0.1
+platformdirs==3.11.0
+promise==2.3
+protobuf==3.20.3
+psutil==5.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+Pygments==2.16.1
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
+regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.6.0
+rpds-py==0.10.6
 rsa==4.9
 scikit-learn==1.3.2
 scipy==1.11.3
@@ -41,12 +80,21 @@ six==1.16.0
 tensorboard==2.14.1
 tensorboard-data-server==0.7.2
 tensorflow==2.14.0
+tensorflow-datasets==4.9.3
+tensorflow-docs==2023.5.24.56664
 tensorflow-estimator==2.14.0
+tensorflow-hub==0.15.0
 tensorflow-io-gcs-filesystem==0.34.0
 tensorflow-macos==2.14.0
+tensorflow-metadata==1.14.0
 termcolor==2.3.0
 threadpoolctl==3.2.0
+toml==0.10.2
+tqdm==4.66.1
+traitlets==5.12.0
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.7
 Werkzeug==3.0.1
 wrapt==1.14.1
+zipp==3.17.0
