--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
 absl-py==1.4.0
+appnope==0.1.3
 array-record==0.4.1
 astor==0.8.1
+asttokens==2.4.1
 astunparse==1.6.3
 attrs==23.1.0
 autokeras==1.1.0
+backcall==0.2.0
 cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
+comm==0.1.4
 contourpy==1.1.1
 cycler==0.12.1
 Cython==3.0.4
+debugpy==1.8.0
+decorator==5.1.1
 dm-tree==0.1.8
 etils==1.5.2
+exceptiongroup==1.1.3
+executing==2.0.0
 fastjsonschema==2.18.1
 flatbuffers==23.5.26
 fonttools==4.43.1
@@ -28,10 +36,14 @@ idna==3.4
 imageio==2.31.6
 importlib-resources==6.1.0
 imutils==0.5.4
+ipykernel==6.26.0
+ipython==8.16.1
+jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+jupyter_client==8.5.0
 jupyter_core==5.4.0
 keras==2.14.0
 keras-core==0.1.7
@@ -44,10 +56,12 @@ Markdown==3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 ml-dtypes==0.2.0
 namex==0.0.7
 nbformat==5.9.2
+nest-asyncio==1.5.8
 nltk==3.8.1
 numpy==1.26.1
 oauthlib==3.2.2
@@ -55,11 +69,17 @@ opencv-python==4.8.1.78
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.1.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==10.0.1
 platformdirs==3.11.0
 promise==2.3
+prompt-toolkit==3.0.39
 protobuf==3.20.3
 psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 Pygments==2.16.1
@@ -67,6 +87,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
+pyzmq==25.1.1
 referencing==0.30.2
 regex==2023.10.3
 requests==2.31.0
@@ -77,6 +98,7 @@ rsa==4.9
 scikit-learn==1.3.2
 scipy==1.11.3
 six==1.16.0
+stack-data==0.6.3
 tensorboard==2.14.1
 tensorboard-data-server==0.7.2
 tensorflow==2.14.0
@@ -90,11 +112,13 @@ tensorflow-metadata==1.14.0
 termcolor==2.3.0
 threadpoolctl==3.2.0
 toml==0.10.2
+tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.12.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
+wcwidth==0.2.8
 Werkzeug==3.0.1
 wrapt==1.14.1
 zipp==3.17.0
